styles.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;1,200&family=Quicksand:wght@500&display=swap');
body {
  margin: 0;
  padding: 0;
  font-family: 'Nunito', sans;
  background: #313131;
  color: #ffffff;
}
h1, h2, h3 {
  font-family: 'Quicksand';
  font-weight: 500;
}
.pagetitle {
    font-size: 12vh;
    text-align: top, center;
}
.maincontainer {
    display: flex;
    width: 100%;
}
.leftAd-div {
    position: top;
    top: 0;
    flex: 0 0 15%;
    min-height: 100vh;
    background: #009999;
    color: #ffffff;
    box-shadow: 2px 0 12px rgba(0,0,0,0.06);
    display: flex;
    flex-direction: column;
    align-items: center;
    border-top-right-radius: 24px;
    border-bottom-right-radius: 24px;
}
.rightAd-div {
    position: top;
    top: 0;
    flex: 0 0 15%;
    min-height: 100vh;
    background: #009999;
    color: #ffffff;
    box-shadow: 2px 0 12px rgba(0,0,0,0.06);
    display: flex;
    flex-direction: column;
    align-items: center;
    border-top-left-radius: 24px;
    border-bottom-left-radius: 24px;
}
.center-div {
    position: top;
    flex: 0 0 70%;
    min-height: 90vh;
    background: #4d4d4d;
    color: #ffffff;
    border-top-left-radius: 32px;
    border-bottom-left-radius: 32px;
    border-top-right-radius: 32px;
    border-bottom-right-radius: 32px;
    box-shadow: -2px 0 12px rgba(0,0,0,0.06);
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}
.centerAd-div {
    position: fixed;
    min-height: 10vh;
    min-width: 70vw;
    bottom: 0;
    border-top-left-radius: 24px;
    border-top-right-radius: 24px;
    border-bottom-left-radius: 24px;
    border-bottom-right-radius: 24px;
    color: #ffffff;
    background: #008080;
}
.testleaderboardad-div {
    width: 728px;
    height: 90px;
    background: #ffffff;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
    color: #000;
}
.testwideskyscraperad-div {
    width: 160px;
    height: 600px;
    background: #ffffff;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
    color: #000;
}
.gamecontainer-div {
    margin: auto;
    width: 65vw;
    height: 50vh;
}

